--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,7 +140,7 @@ services:
       - POSTGRES_DB=manage_recalls
 
   minio:
-    image: minio/minio:latest
+    image: minio/minio:RELEASE.2022-01-28T02-28-16Z
     container_name: minio_manage-recalls-e2e
     ports:
       - 4566:4566
