Ignore the `.env` file

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-target/
-build
+.DS_Store
+.env
 .gradle
 .idea/
 *.iml
 bin/
-node_modules
-.DS_Store
-cypress/videos
-cypress/reports
-cypress/downloads
-cypress/screenshots
-cypress/cucumber-json
-cypress/logs
+build
 cypress-dev.sh
-
+cypress/cucumber-json
+cypress/downloads
+cypress/logs
+cypress/reports
+cypress/screenshots
+cypress/videos
 logs
+node_modules
 screenshots
+target/
