Introduce the do-exclusively script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,36 +97,6 @@ jobs:
           path: cypress/reports
           destination: reports
 
-  deploy-check:
-    executor:
-      name: hmpps/node
-      tag: 16.13-browsers
-    environment:
-      ENVIRONMENT: <<pipeline.parameters.e2e_environment>>
-    steps:
-      - browser-tools/install-chrome
-      - browser-tools/install-chromedriver
-      - checkout
-      - run:
-          name: Update NPM to match package.json
-          command: sudo npm install -g npm@$(jq -r '.engines.npm' < package.json)
-      - node/install-packages
-      - run:
-          name: "Run Cypress tests [<<pipeline.parameters.e2e_environment>>]"
-          command: |
-            set +e
-            npx cypress run --env USERNAME=${CYPRESS_USERNAME_<<pipeline.parameters.e2e_environment>>},PASSWORD=${CYPRESS_PASSWORD_<<pipeline.parameters.e2e_environment>>},NOMS_NUMBER=${NOMS_NUMBER_<<pipeline.parameters.e2e_environment>>} --config baseUrl=https://manage-recalls-<<pipeline.parameters.e2e_environment>>.hmpps.service.justice.gov.uk --browser chrome
-            export E2E_RESULT=$?
-            npm run cypress:report
-            set -e
-            exit $E2E_RESULT
-      - store_artifacts:
-          path: cypress/screenshots
-          destination: screenshots
-      - store_artifacts:
-          path: cypress/reports
-          destination: reports
-
   check-env:
     executor:
       name: hmpps/node
@@ -147,9 +117,14 @@ jobs:
           name: "Run Cypress tests [<< parameters.environment >>]"
           command: |
             set +e
-            npx cypress run --env USERNAME=${CYPRESS_USERNAME_<< parameters.environment >>},PASSWORD=${CYPRESS_PASSWORD_<< parameters.environment >>},NOMS_NUMBER=${NOMS_NUMBER_<< parameters.environment >>} --config baseUrl=https://manage-recalls-<< parameters.environment >>.hmpps.service.justice.gov.uk --browser chrome
+
+            ./scripts/do-exclusively \
+              --job check-<< parameters.environment >> \
+              npx cypress run --env USERNAME=${CYPRESS_USERNAME_<< parameters.environment >>},PASSWORD=${CYPRESS_PASSWORD_<< parameters.environment >>},NOMS_NUMBER=${NOMS_NUMBER_<< parameters.environment >>} --config baseUrl=https://manage-recalls-<< parameters.environment >>.hmpps.service.justice.gov.uk --browser chrome
+
             export E2E_RESULT=$?
             npm run cypress:report
+
             set -e
             exit $E2E_RESULT
       - store_artifacts:
@@ -166,7 +141,16 @@ workflows:
       not: << pipeline.parameters.only_run_deploy_check >>
     jobs:
       - local-check
-      - deploy-check
+      - check-env:
+          name: check-dev
+          environment: dev
+
+  deploy_only:
+    when: << pipeline.parameters.only_run_deploy_check >>
+    jobs:
+      - check-env:
+          name: check-dev
+          environment: dev
 
   check-docker:
     when: << pipeline.parameters.check-docker >>
