Fix a few issues with the parallel running of tests
- Output run reports in junit XML - this is format the
  `store_test_results` step expects.
- Add the `--split-by=timings` directive to the test splitting code. Now
  we have the junit results it'll better balance the tests.
- Pass a comma separated list of files to cypress - this removes a
  warning.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
           command: |
             nvm use $(jq -r '.engines.node' <package.json)
 
-            SPECS=$(circleci tests glob cypress/integration/*.feature | circleci tests split)
+            SPECS=$(circleci tests glob cypress/integration/*.feature | circleci tests split --split-by=timings | tr "\n" "," | tr " " ",")
             echo "Running feature spec(s): ${SPECS}"
 
             set +e
@@ -100,7 +100,7 @@ jobs:
           path: cypress/reports
           destination: reports
       - store_test_results:
-          path: cypress/reports
+          path: cypress/junit
 
   check-env:
     docker:
@@ -124,7 +124,7 @@ jobs:
       - run:
           name: Run Cypress tests [<< parameters.environment >> - invoked by << pipeline.parameters.invoked-by >>]
           command: |
-            SPECS=$(circleci tests glob cypress/integration/*.feature | circleci tests split)
+            SPECS=$(circleci tests glob cypress/integration/*.feature | circleci tests split --split-by=timings | tr "\n" "," | tr " " ",")
             echo "Running feature spec(s): ${SPECS}"
 
             set +e
@@ -158,7 +158,7 @@ jobs:
           path: cypress/reports
           destination: reports
       - store_test_results:
-          path: cypress/reports
+          path: cypress/junit
 
   test-bash-scripts:
     executor: hmpps/default
