--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cypress": "^9.2.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-file-upload": "^5.0.8",
+    "cypress-multi-reporters": "^1.5.0",
     "luxon": "^2.2.0",
+    "mocha-junit-reporter": "^2.0.2",
     "multiple-cucumber-html-reporter": "^1.18.3",
     "pdf-parse": "^1.1.1"
   },
