Update Redis setup (#207)
* Update Redis setup

- Update the redis image to 6.2
- Update redis to use a password (this is more representative of how it will be used on AWS)
- Add in a redis-commander setup so we can look at the contents of redis easily (useful for debugging)

* Tweak cypress settings to see if we can see errors betterer

* More fixes

* Use old fashioned docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,27 @@ version: '3.1'
 services:
 
   redis:
-    image: 'bitnami/redis:5.0'
+    image: 'bitnami/redis:6.2'
     networks:
       - manage-recalls-e2e
     container_name: redis-e2e
     environment:
-      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_PASSWORD=secret
     ports:
       - '6379:6379'
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: redis-commander-e2e
+    depends_on: [redis]
+    networks:
+      - manage-recalls-e2e
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=secret
+    ports:
+      - 9999:8081
 
   gotenberg:
     image: thecodingmachine/gotenberg:7.5.0
@@ -97,7 +110,7 @@ services:
       - "9091:8080"
       - "9081:8081"
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/health/ping" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/health" ]
     environment:
       - SERVER_PORT=8080
       - SPRING_PROFILES_ACTIVE=dev
@@ -129,6 +142,7 @@ services:
     environment:
       - NODE_ENV=dev
       - REDIS_HOST=redis
+      - REDIS_AUTH_TOKEN=secret
       - INGRESS_URL=http://localhost:3000
       - HMPPS_AUTH_EXTERNAL_URL=http://localhost:9090/auth
       - HMPPS_AUTH_URL=http://hmpps-auth:8080/auth
