Fix the splitting of the E2E scenarios.
The (junit format) result XML we pass onto CircleCI was missing the
filename information for each individual test so we weren't correctly
splitting the scenarios based on timing.

The added script fixes the generated XML files.

ref: https://github.com/michaelleeallen/mocha-junit-reporter/issues/132#issuecomment-721943600

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
 
             export E2E_RESULT=$?
             npm run cypress:report
+            node scripts/fix-junit-reports.js
 
             set -e
             exit $E2E_RESULT
@@ -99,6 +100,9 @@ jobs:
       - store_artifacts:
           path: cypress/reports
           destination: reports
+      - store_artifacts:
+          path: cypress/junit
+          destination: junit
       - store_test_results:
           path: cypress/junit
 
@@ -144,6 +148,7 @@ jobs:
             echo "${CIRCLE_NODE_TOTAL}" > "workspace/env-output/TOTAL_NODES"
 
             npm run cypress:report
+            node scripts/fix-junit-reports.js
 
             # NOTE: We *always* exit cleanly here so we can report results, we'll use the exit code later
             exit 0
@@ -157,6 +162,9 @@ jobs:
       - store_artifacts:
           path: cypress/reports
           destination: reports
+      - store_artifacts:
+          path: cypress/junit
+          destination: junit
       - store_test_results:
           path: cypress/junit
 
