--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "luxon": "^2.2.0",
     "mocha-junit-reporter": "^2.0.2",
     "multiple-cucumber-html-reporter": "^1.18.3",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "xml2js": "^0.4.23"
   },
   "cypress-cucumber-preprocessor": {
     "step_definitions": "cypress/integration/stepDefinitions/",
